# yacppm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_test.sh  yacppm.toml
src/: main.cpp
src/cli/: parser.cpp  parser.hpp
src/cli/commands/: add.hpp  build.hpp  new.hpp  remove.hpp  run.hpp  set.hpp  symlink.hpp  version.hpp
src/core/: builder.hpp  manifest.cpp  manifest.hpp
src/core/template_parser/: template_manager.cpp  template_manager.hpp
src/generator/: cmake_generator.cpp  cmake_generator.hpp  toolchain_generator.hpp
src/utils/: command_helper.hpp  constant.hpp  git_utils.cpp  git_utils.hpp  isl_getter.cpp  isl_getter.hpp  link_utils.hpp  logger.hpp  template_parser.hpp
templates/default/src/: main.cpp
templates/gdextension/: template.deps
templates/raylib/: template.deps
templates/raylib/src/: main.cpp
